--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
-    "react-scripts": "1.0.12"
+    "react-scripts": "1.0.12",
+    "style-loader": "^0.18.2"
   },
   "scripts": {
     "predeploy": "npm run build",
